--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.sample</groupId>
-	<artifactId>jbpm-example</artifactId>
+	<groupId>io.github.swanky</groupId>
+	<artifactId>jbpm6-example</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-
-	<name>jBPM :: Sample Maven Project</name>
-	<description>A sample jBPM Maven project</description>
 
 	<properties>
 		<jbpm.version>6.3.0.Final</jbpm.version>
 	</properties>
 
 	<dependencies>
+		<!-- jBPM & Drools -->
 		<dependency>
 			<groupId>org.drools</groupId>
 			<artifactId>drools-core</artifactId>
@@ -26,6 +23,13 @@
 			<groupId>org.jbpm</groupId>
 			<artifactId>jbpm-test</artifactId>
 			<version>${jbpm.version}</version>
+		</dependency>
+
+		<!-- Other -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.6</version>
 		</dependency>
 	</dependencies>
 
